kubernetes/apps/media/radarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: filmstrip
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "radarr.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
